# cryptolake

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.backfill  Dockerfile.collector  Dockerfile.consolidation  Dockerfile.writer  build.gradle.kts  docker-compose.chaos-02-nfs.yml  docker-compose.chaos-02.yml  docker-compose.debug-writer.yml  docker-compose.disk-test.yml  docker-compose.java.yml  docker-compose.tap.yml  docker-compose.test.yml  docker-compose.vps.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  settings.gradle.kts
backfill/: build.gradle.kts
cli/: build.gradle.kts
collector/: build.gradle.kts
common/: build.gradle.kts
config/: config.example.yaml  config.test.yaml  config.yaml
consolidation/: build.gradle.kts
cryptolake-java/: .gitignore  build.gradle.kts  settings.gradle.kts
cryptopanner/: .gitignore  CLAUDE.md  Makefile  README.md  build.gradle.kts  docker-compose.yml  pom.xml  settings.gradle.kts
docker/: Dockerfile.backfill  Dockerfile.collector  Dockerfile.consolidation  Dockerfile.writer
docs/: 2026-03-13-cryptolake-design.md  2026-03-13-cryptolake-development-plan-generic.md  2026-03-15-cryptolake-implementation.md  2026-03-18-aws-ec2-deployment-design.md  2026-03-18-aws-ec2-deployment.md  2026-03-22-cryptolake-context-graph.md  2026-05-08-rolling-update-plan.md  2026-05-08-vps-deployment-guide.md
gradle/: libs.versions.toml
parity-fixtures/: README.md
scripts/: audit-backfill.sh  audit-files.sh  audit-reconcile.sh  audit-state.sh  cryptolake-maintenance.sh  host_lifecycle_agent.py  run-all-tests.sh  (+8 more)
(+963 files in other folders)
