[project]
name = "cryptolake"
version = "0.1.0"
description = "Raw-first crypto market data collection system"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "click>=8.1.0",
    "confluent-kafka>=2.5.0",
    "orjson>=3.10.0",
    "prometheus-client>=0.21.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.0",
    "structlog>=24.4.0",
    "uvloop>=0.19.0",
    "websockets>=13.0",
    "zstandard>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "testcontainers[kafka,postgres]>=4.7.0",
]

[project.scripts]
cryptolake = "src.cli.verify:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring external services",
    "chaos: marks chaos/failure-mode tests",
]

[tool.ruff]
target-version = "py312"
line-length = 120

